<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:layout_marginBottom="?android:attr/actionBarSize"
    android:orientation="vertical"
    tools:context=".fragments.ScooterSharingFragment">

    <!-- Button to add rides-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/fui_bgFacebook"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_electric_scooter_24" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/rental"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ride_history_button" />


</LinearLayout>